test/asm/dots-constant.err
error: syntax error, unexpected local label, expecting symbol
    at dots-constant.asm(2)
Assembly aborted with 1 error!
