test/asm/dots-constant.asm
section "test", rom0
def #... equs "sublocal"
